<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sytrant</string>
    <string name="server_address">time-b.nist.gov</string>
    <string name="gmt_label">GMT offset</string>
    <string name="gmt_offset">0</string>
    <string name="minutes_label">mins</string>
    <string name="log_start_message">Push SYNC MY TIME to start (or MENU for options)</string>
    <string name="start_button_label">Sync my time</string>
    <string name="about_text">"This program does a simple job, but still needs a rooted phone. Built-in time synchronization function makes a mistake in about 2 minutes on my device! 

\"Contrary to Googles belief not all providers provide time information\"


"</string>
    <string name="about_title">About Sytrant</string>
    <string name="about_menu_label">About</string>
    <string name="settings_menu_label">Settings</string>
    <string name="settings_title">Sytrant settings</string>
    <string name="exit_menu_label">Exit</string>
    <string name="server_settings_label">Time server address</string>
    <string name="port_settings_label">Servers connection port</string>
    <string name="update_interval_label">Autosync time interval</string>
    <string name="gmtoffset_minus_label">negative</string>
    <string name="save_settings_dialog_title">Saving settings</string>
    <string name="save_settings_dialog_message">Do you wish to save changes?</string>
    <string name="yes_button_title">Yes</string>
    <string name="no_button_title">No</string>
    <string name="cancel_button_title">"Don't know"</string>
    <string name="autosync_enable_title">enable</string>
    <string name="autosync_autostart_title">autostart</string>
    <string name="setdefaults_button_title">Set defaults</string>
    <string name="log_error_start_sync_message">Cant start sync thread =(</string>
    <string name="log_start_sync_message">Let me see, let me see...</string>
    <string name="log_adjusting">Adjusting system time...</string>
    <string name="log_analyzing">Analyzing server response...</string>
    <string name="log_connecting">Connecting to server...</string>
    <string name="log_gettime_error">Get right time error:</string>
    <string name="log_finished_sync">Thats all! Check your time ;)</string>
    <string name="log_seconds">secs</string>
    <string name="log_minutes">min</string>
    <string name="log_milliseconds">ms</string>
    <string name="log_network_latency">Network latency:</string>
    <string name="log_settime_error">Cant set system time. Im not rooted or root permissions are forbidden for me:</string>
    <string name="log_time_change">Time changed:</string>
    <string name="log_unknown_response">Server returned unknown response</string>
    <string name="log_finished_sync2">"If you like (or don't =)) this app, please, click the ad below."</string>
    <string name="autosync_enabled_toast">Autosync service enabled</string>
    <string name="autosync_disabled_toast">Autosync service disabled</string>
    <string name="gmtoffset_daylightsaving_label">automatic daylight saving</string>
</resources>
