<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:qwad="http://schemas.android.com/apk/res/ru.atools.sytrant"
  xmlns:myapp="http://schemas.android.com/apk/res/ru.atools.sytrant">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="48.0dip">
        <TextView android:textSize="24.5sp" android:layout_gravity="center" android:id="@id/server_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_address" />
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="24.5sp" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmt_label" />
            <TextView android:textSize="24.5sp" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" />
            <TextView android:textSize="24.5sp" android:gravity="center" android:id="@id/gmt_textview" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmt_offset" />
            <TextView android:textSize="24.5sp" android:gravity="center" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minutes_label" />
        </LinearLayout>
        <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@id/log_scrollview" android:paddingTop="15.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="10.0">
            <TextView android:id="@id/log_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/log_start_message" />
        </ScrollView>
        <Button android:textSize="24.5sp" android:id="@id/sync_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_button_label" android:layout_weight="0.0" />
    </LinearLayout>
</FrameLayout>