<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:isScrollContainer="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textSize="17.0dip" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_settings_label" />
        <EditText android:id="@id/server_edittext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="time-b.nist.gov" android:lines="1" />
        <TextView android:textSize="17.0dip" android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/port_settings_label" />
        <EditText android:id="@id/port_edittext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="13" android:lines="1" android:maxLength="5" android:inputType="number" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:textSize="17.0dip" android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmt_label" />
            <CheckBox android:id="@id/gmt_daylight_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmtoffset_daylightsaving_label" />
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <CheckBox android:layout_gravity="center" android:id="@id/gmt_negative_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmtoffset_minus_label" />
                <TimePicker android:layout_gravity="center" android:id="@id/gmt_timepicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:textSize="17.0dip" android:id="@id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_interval_label" />
            <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@id/autosync_layout" android:layout_width="wrap_content" android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  xmlns:android="http://schemas.android.com/apk/res/android">
                    <CheckBox android:layout_gravity="center_vertical" android:id="@id/autosync_enable_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autosync_enable_title" />
                    <CheckBox android:layout_gravity="center_vertical" android:id="@id/autosync_autostart_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autosync_autostart_title" />
                </LinearLayout>
                <TimePicker android:id="@id/autosync_timepicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <Button android:id="@id/setdefaults_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="48.0dip" android:text="@string/setdefaults_button_title" />
    </LinearLayout>
</ScrollView>